Making use of Virtual threads instead of platform threads